refactor(config): switch weaviate locally to weaviate cloud